Fix collapsing margins from floats

--- a/css/styles.css
+++ b/css/styles.css
@@ -126,16 +126,15 @@ footer {
   margin-top: 4em;
 }
 
-#contact {
-  margin: 0 1em 4em;
-}
 
 #contact h2 {
   padding-bottom: 1em;
 }
 
+
 address {
   font-style: normal;
+  padding-bottom: 4em;
 }
 
 address span {
@@ -237,16 +236,19 @@ MEDIA QUERIES
   .project {
     float: left;
     width: 50%;
-    padding: 0.5em;
+    padding: 1em;
+    margin-bottom: 0.5em;
   }
 
-  #contact {
-    width: 75%;
-    margin: 0 auto;
+  .project p {
+    /* keep height of this element consistent */
+    height: 3.75em;
   }
 
-  #contact p {
+  .get-in-touch {
     font-size: 1.266em;
+    max-width: 75%;
+    margin: 0 auto;
   }
 
   .credit p a {
@@ -255,6 +257,7 @@ MEDIA QUERIES
 
   footer {
     padding-bottom: 2em;
+    width: 100%;
   }
 
   .footer-nav {
